game/02-CSS/base.css
/* ... */
#mobileStats .time .ampm {
	font-size: 0.5em;
}

#savesListContainer {
	display: flex;
	flex-direction: column;
	border: 1px solid #999;
	max-width: 800px;
}

#savesListContainer .savesListRow {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	align-items: center;
	border: 1px solid #999;
	padding: 4px;
}

#savesListContainer .savesListRow .saveGroup {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: center;
	flex-grow: 1;
	flex-shrink: 1;
	/* Set min-width to allow parent correctly to resize this element's children */
	min-width: 0;
}

#savesListContainer .savesListRow .saveGroup > div {
	display: flex;
	justify-content: center;
	margin: 0 10px;
	flex-shrink: 0;
	flex-grow: 0;
}

#savesListContainer .savesListRow .saveGroup .saveId {
	min-width: 10px;
}

#savesListContainer .savesListRow .saveGroup .saveButton {
	min-width: 110px;
	display: flex;
	justify-content: center;
	margin: 0 10px;
}

#savesListContainer .savesListRow .saveGroup .saveName {
	width: 60px;
}

#savesListContainer .savesListRow .saveGroup .saveButton input {
	margin: 3px 0;
}

#savesListContainer .savesListRow .saveGroup > .saveDetails {
	flex-grow: 1;
	flex-shrink: 1;
	flex-basis: 0px;
	min-width: 100px;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	justify-content: stretch;
}

#savesListContainer .savesListRow .saveGroup > .saveDetails span {
	max-height: 80px;
	overflow-y: hidden;
}

#savesListContainer .savesListRow .saveGroup .deleteButton {
	display: flex;
	justify-content: right;
	margin: 0;
}

.datestamp {
	font-size: 13px;
}

.listMargin {
	display: inline-block;
	margin: 1px 0;
}

.right {
	float: right;
}

.saveMenuButton {
	background-color: #4372FF !important;
}

.saveMenuButton:hover {
	background-color: #4372FF !important;
}

.saveMenuConfirm {
	margin-top: 20px;
	margin-left: 150px;
}

.saveBorder {
	border: 1px solid #ccc;
	max-width: 700px;
	padding: 5px 2px 30px;
	margin: 10px 2px 10px;
}

#menu {
	display: none;
}

.settingsToggle {
	display: inline-block;
	float: left;
	width: 45%;
	min-width: 275px;
	padding: 3px;
	margin: 5px;
	border: 1px solid #666;
}

.settingsToggleBig {
	float: left;
	width: 100%;
	min-width: 275px;
	padding: 3px;
	margin: 10px 0px;
}

.v-spacer {
	margin: 1em 0;
}

#divbowl {
		position: relative;
		display: inline-block;
		height: 50px;
		width: 50px;

}

#divmap {
	position: relative;
	display: inline-block;
	height: 256px;
	width: 256px;
}

#map {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 10;
}

#maparrow {
	position: absolute;
	left: 0px;
	top: 0px;
	z-index: 20;
}

#ui-bar-toggle {
	z-index: 500;
}

#ui-bar {
	z-index: 300;
}

.stowed{
	z-index: 298 !important;
}

.solidBorderContainer	{
	border: 1px solid #333;
	padding: 5px;
}

.debugLines-audience {
	border: dotted red 1px;
}

.debugLines-combat {
	border: dotted yellow 1px;
}

.debugLines-effectsman {
	border: dotted green 1px;
}

.debugLines-stateman {
	border: dotted cyan 1px;
}

.debugLines-actionsman {
	border: dotted pink 1px;
}

.debugLines-beast {
	border: dotted blue 1px;
}

.debugLines-tentacles {
	border: dotted yellow 1px;
}

.debugLines-actionstentacles {
	border: dotted pink 1px;
}

.debugLines-effectstentacleadv {
	border: dotted green 1px;
}

.debugLines-swarm {
	border: dotted green 1px;
}

.debugLines-swarmactions {
	border: dotted pink 1px;
}

.reducedLineHeight .passage {
	line-height: 1.5;
}

body.has-images header#title {
	display: none;
}
body.has-images #story-caption #storyCaptionDiv {
	/* 256 px: images
	2.5 em: ui-bar-body margin-top */
	margin-top: calc(256px - 2.5em);
}

body.has-images #story-caption .storyCaptionDivExtended {
	margin-top: calc(281px - 2.5em) !important;
}

.nostyle {
	list-style: none;
}

.shopCustomColors {
	float:left;
	width: 48%;
	min-width: 375px;
	border: solid 2px #555;
	padding:4px;
	height: 310px;
}

.shopImg {
	height: 192px;
	width: 128px;
	overflow: hidden;
	background-color: #222;
}

.shopImg > * {
	position: absolute;
	height: 192px;
	left:-32px;
	overflow: hidden;
}

.hideImageOverflow {
	overflow: hidden;
	height: 160px;
	width: 128px;
	position: relative;
}

/*Wardrobe UI*/
.wardrobeItem {

	display: inline-block;
	padding: 2px;
	float: left;
	border: solid 1px #aaa;
	height: 30px;
	width: 48%;
	min-width: 400px;
	margin: 0px 3px 3px;
	white-space: nowrap;
	overflow: hidden;
}

#wardrobeItemDetails {
	display: inline-block;
	padding: 2px;
	float: left;
	border: solid 1px #aaa;
	height: 100%;
	width: 90%;
	min-width: 400px;
	margin: 0px 30px 9px 30px;
	/*white-space: nowrap;*/
	overflow: hidden;
}

#wardrobeLinks .selected {
	color: #FFD700;
	text-decoration: underline;
}

.clothingBox {
	display: inline-block;
	float: left;
	border: solid 2px #fff;
	height: 250px;
	width: 270px;
	padding: 4px;
	margin: 2px;
}

.clothingBox div{
	position: relative;
	bottom: 0px;
	height: 190px;
	overflow-y: scroll;
}

.clothingBox div ul{
	margin-left: 0px;
}

#customColor div {
	height: 30px;
	width: 200px;
	background-color: red;
}

.presetConfirm {
	line-height: 1.4;
}

.presetConfirm ul {
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.red {
	color: #EC3535;
}

.pink {
	color: #E40081;
}

.light-pink {
	color: #d67caf;
}

.purple {
	color: #AA4BC8;
}

.blue {
	color: #4372FF;
}

.lblue,
.light-blue {
	color: #559BC0;
}

.teal {
	color: #08C1C1;
}

.green {
	color: #38B20A;
}

.brown {
	color: #4C2217;
}

.brat {
	color: #B75D41;
}

.meek {
	color: #C44B8B;
}

.def {
	color: #D20000;
}

.hide a {
	color: #eee;
	text-decoration: none;
}

.hide a:hover {
	color: #eee;
	text-decoration: none;
}

.sub {
	color: #AA4BC8;
}

.gold, .gold button, .goldLink a {
	color: #FFD700;
}

.silver {
	color: silver;
}

.bronze {
	color: #CD7F32;
}

.steel {
	color: #8d9496;
}

.blue-steel {
	color: #393747;
}

.yellow,
.pale-yellow {
	color: #FFD700;
}

.orange {
	color: #f28500;
}

.tangerine,
.pale-tangerine {
	color: #f28500;
}

.black {
	color: #929292;
}

.brown {
	color: #aa7243;
}

.softbrown {
	color: #a45e16;
}
/* ... */

